objects/geopointe__GP_Resource_View_Group__c.object
<CustomObject>
    <fields>
        <fullName>geopointe__Color__c</fullName>
        <label>Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Date_Added__c</fullName>
        <label>Date Added</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>geopointe__Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <label>Geopointe Resource View Group</label>
    <nameField>
        <label>Geopointe Resource View Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe Resource View Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>